--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,233 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+/* .reply{
+  display: none;
+} */
+body{
+  display: flex;
+  justify-content: center;
+  font-size: 16px;
+  
+  background-color: hsl(358, 81%, 94%) ;
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#chat{
+  display: flex;
+ position:absolute;
+ top: 500px;
+ left: 350px;
+ gap: 10px;
 }
+#chat button{
+  background-color: rgb(30, 30, 122);
+  color: white;
+  border: none;
+  border-radius: 3px;
+}
+#chat img{
+  width: 40px;
+  height: 40px;
+}
+#chat textarea{
+  width:400px;
+  height:40px;
+  border:1px solid rgb(30, 30, 122)
+}
+
+.App{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 20px;
+  width: 800px;
+  overflow-y: auto;
+  max-height: 400px;
+ background-color:  hsl(358, 81%, 94%);
+
+}
+.REPLYAREA{
+  display: flex;
+  gap:10px;
+
+  color:rgb(30, 30, 122);
+  text-transform: capitalize;
+  cursor: pointer;
+  font-size: 13px;
+  padding: 1px ;
+  justify-content: center;
+  align-items: center;
+  width:150px;
+  }
+  .REPLYAREA img{
+    width: 15px;
+    height: 15px;
+  }
+  .ur{
+    width: 30px;
+    height: 30px;
+    position: relative;
+    top:5px;
+    margin-right: 3px;
+  }
+  .seconduser   .commandHead{
+    display:flex;
+    gap:40%;
+    font-size: 13px;
+  
+   }
+ .commandHead{
+  display:flex;
+  gap:50%;
+  font-size: 13px;
+
+ }
+ .COMMANDIB{
+  display: flex;
+  gap:10px
+ }
+ .COMMANDIB img{
+  width: 25px;
+  height: 25px;
+ }
+
+
+
+ .user{
+  border-radius:4px;
+  width:700px;
+  padding:10px;
+  margin-left: 10px;
+  background-color:hsl(0, 0%, 100%);
+ }
+ .user:hover{
+  box-shadow: 2px 1px 3px ;
+ }
+
+
+ p{
+  font-size: 13px;
+ }
+ .crud{
+  width: 15px;
+  height: 15px;
+  display: none;
+ }
+ .crud2{
+  width: 15px;
+  height: 15px;
+  display: none;
+ }
+ .para2{
+  display: none;
+ }
+ .bt{
+  display: none;
+ }
+ .editpara{
+  display: flex;
+  gap: 10px;
+ }
+ .editpara button{
+  width: 54px;
+  height: 20px;
+  margin-top: 10px;
+  background-color: rgb(30, 30, 122);
+  color: white;
+  border:none
+  ;
+ }
+ .editpara textarea {
+  border: none;
+  color:rgb(30, 30, 122);
+
+ }
+ .editpara textarea:hover{
+  border:none;
+  color:rgb(30, 30, 122);
+  cursor: pointer;
+ }
+ .minmiz{
+  display: flex;
+  align-items: end;
+  justify-content: end;
+ }
+ .minmiz button{
+  margin-right: 50px;
+ }
+ .replylist{
+  border-top: 0.5px solid gray;
+  padding-top: 10px;
+  display: none;
+ }
+
+ p{
+  /* color: rgb(28, 28, 159); */
+  font-size: 13px;
+  font-weight: bolder;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+ }
+ .jvl {
+ margin-top: 10px;
+ width: 80%;
+ height: 40px;
+ }
+ .jvl2{
+  margin-top: 10px;
+  width: 50%;
+  height: 30px;
+ }
+ .span{
+  /* font-size: 13px;
+  font-weight: bolder; */
+  color: red;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+ }
+ .b{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  position: relative;
+  top: -2px;
+
+ }
+ .replylist button{
+  background-color: rgb(30, 30, 122);
+  color: white;
+  border: none;
+  margin-left: 3px;
+  padding: 10px;
+  font-size: 12px;
+  border-radius: 2px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+ }
+ .seconduser{
+  margin-left: 30px;
+  margin-top: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: rgb(242, 225, 227);
+  width: 90%;
+ }
+ p{
+    margin-left: 40px;
+ }
+ /* .user2inp{
+  display:none;
+ } */
+ .secondmap{
+  background-color: white;
+  padding: 10px;
+  margin-top: 15px;
+  position: relative;
+  /* left: -50px; */
+  border: 1px solid black;
+  box-shadow: 1px 1px 3px;
+ }
+ .secondmap b{
+  font-size: 13px;
+ }
+ .white{
+  background-color: white;
+ }
+ 
+
+
